--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "description": "backend logic of the project using Mongo DB, Node js",
   "devDependencies": {
     "jest": "29.5.0",
+    "nodemon": "^3.0.1",
     "supertest": "6.3.3"
   },
   "homepage": "https://github.com//backend#readme",
@@ -48,6 +49,8 @@
     "url": "git+https://github.com//backend.git"
   },
   "scripts": {
+    "preinstall": "node checkNodeVersion",
+    "prestart": "node checkNodeVersion",
     "start": "nodemon",
     "test": "jest"
   },
