--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "node checkNodeVersion",
+    "prestart": "node checkNodeVersion",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
